# python-openinput

./: LICENSE  README.md  pyproject.toml
openinput/: pages.py
